--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,7 +9,7 @@
   margin-top:45px;
 }
 
-@media screen and (max-width:420px){
+@media screen and (max-width:320px){
   .header{
     width:320px;
     height:56px;
